# RGS

./: CMakeLists.txt
src/: Application.cpp  Application.h  Base.h  FrameBuffer.cpp  FrameBuffer.h  InputCode.h  Main.cpp  Maths.cpp  Maths.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/Shader/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
